--- a/4.html
+++ b/4.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <title>微信图片测试</title>
 
-<img src="/20181025news.png"  width=100%/>
+<img src="20181025news.png"/>
 
 </head>
 </html>
