--- a/autumn/index.html
+++ b/autumn/index.html
@@ -1,3 +1,4 @@
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" /> 
 <section class="_pbx" data-by="paibanxia">
     <section style="margin: 5px auto;display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-box-pack: center;-webkit-justify-content: center;-ms-flex-pack: center;justify-content: center;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center">
         <section class="bgc" style="padding: 3px;background: #a2bbd3">
